update swaggerd api-doc
